<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ViewToDoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="16dp">
        <EditText
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_no_border"
            android:hint="@string/enter_title"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="Autofill,LabelFor,TextFields" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/noteContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        android:padding="16dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        android:gravity="end"
        android:background="@drawable/todo_row_item_background">

        <EditText
            android:id="@+id/tvNote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_no_border"
            android:hint="@string/note_something"
            android:text="@string/note"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:minHeight="200dp"
            android:gravity="top"
            tools:ignore="Autofill,LabelFor,TextFields" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:contentDescription="@string/delete"
            android:src="@drawable/baseline_delete_24" />

    </LinearLayout>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/noteContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="16dp"
        android:text="@string/update"
        android:textSize="14sp"
        android:textStyle="normal" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="32dp"
        android:src="@drawable/baseline_done_24"
        android:contentDescription="@string/done"
        />


</androidx.constraintlayout.widget.ConstraintLayout>