<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="16dp"
    android:orientation="vertical"
    android:showDividers="middle"
    android:divider="@drawable/vertical_separator"
    tools:context=".activities.AddToDoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="16dp"
        android:text="@string/new_task"
        android:textSize="21sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:padding="16dp"
        android:background="@drawable/todo_row_item_background"
        android:hint="@string/enter_title" />

    <EditText
        android:id="@+id/edDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/todo_row_item_background"
        android:padding="16dp"
        android:gravity="top|start"
        android:height="200dp"
        android:hint="@string/note_something" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="Save" />

</LinearLayout>